@@ -2,6 +2,7 @@
    modeler, Finite element mesher, Plugin architecture.
  
     Copyright (C) 2005, by EADS CRC
+    Copyright (C) 2007, by EADS France
  
     This library is free software; you can redistribute it and/or
     modify it under the terms of the GNU Lesser General Public
@@ -86,7 +87,7 @@ public class Compat1D2D
 			curvmax[i] = 0.0;
 		
 		CADEdge E = submesh1d.getGeometry();
-		CADGeomCurve3D curve3d = CADShapeFactory.factory.newCurve3D(E);
+		CADGeomCurve3D curve3d = CADShapeFactory.getFactory().newCurve3D(E);
 		if (curve3d == null)
 			return true;
 		double [] coord = new double[3*curvmax.length];
@@ -104,7 +105,7 @@ public class Compat1D2D
 		
 		for (CADFace F: faceset)
 		{
-			CADGeomCurve2D curve2d = CADShapeFactory.factory.newCurve2D(E, F);
+			CADGeomCurve2D curve2d = CADShapeFactory.getFactory().newCurve2D(E, F);
 			if (curve2d == null)
 				continue;
 			
